src/objects/EC_PriceList_Category_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>EC_Category__c</fullName>
        <label>Category</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EC_Currency__c</fullName>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_Locale__c</fullName>
        <label>Locale</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EC_PriceList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>ccrz__E_PriceList__c</referenceTo>
        <relationshipLabel>PriceList Category Mappings</relationshipLabel>
        <relationshipName>PriceList_Category_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PriceList Category Mapping</label>
    <nameField>
        <displayFormat>PL-CAT-{0000000}</displayFormat>
        <label>PriceList Category Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PriceList Category Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>